@@ -335,10 +335,14 @@ void LayerSelector::_buildEntry(unsigned depth, SPObject &object) {
 
     Gtk::ListStore::iterator row(_layer_model->append());
 
-    sp_object_ref(&object, NULL);
-
     row->set_value(_model_columns.depth, depth);
+
+    sp_object_ref(&object, NULL);
     row->set_value(_model_columns.object, &object);
+
+    sp_repr_ref(SP_OBJECT_REPR(&object));
+    row->set_value(_model_columns.repr, SP_OBJECT_REPR(&object));
+
     row->set_value(_model_columns.callbacks, reinterpret_cast<void *>(callbacks));
 
     sp_repr_add_listener(SP_OBJECT_REPR(&object), vector, callbacks);
@@ -351,9 +355,12 @@ void LayerSelector::_destroyEntry(Gtk::ListStore::iterator const &row) {
     Callbacks *callbacks=reinterpret_cast<Callbacks *>(row->get_value(_model_columns.callbacks));
     SPObject *object=row->get_value(_model_columns.object);
     if (object) {
-        SPRepr *repr=SP_OBJECT_REPR(object);
-        sp_repr_remove_listener_by_data(repr, callbacks);
         sp_object_unref(object, NULL);
+    }
+    SPRepr *repr=row->get_value(_model_columns.repr);
+    if (repr) {
+        sp_repr_remove_listener_by_data(repr, callbacks);
+        sp_repr_unref(repr);
     }
     delete callbacks;
 }
